# k6-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/k6-cli/: Cargo.toml
crates/k6-cli/src/: env.rs  main.rs
crates/k6-cli/src/analysis/: memory_monitor.rs  mod.rs  script_lint.rs
crates/k6-core/: Cargo.toml
crates/k6-core/src/: backpressure.rs  config.rs  lib.rs  metrics.rs  summary.rs  thresholds.rs  traits.rs  vu_pool.rs
crates/k6-core/src/executor/: constant_arrival_rate.rs  constant_vus.rs  externally_controlled.rs  mod.rs  per_vu_iterations.rs  ramping_arrival_rate.rs  ramping_vus.rs  shared_iterations.rs
crates/k6-core/src/output/: csv.rs  duckdb.rs  influxdb.rs  json.rs  mod.rs  prometheus.rs
crates/k6-core/src/shared/: array.rs  counter.rs  mod.rs  queue.rs
crates/k6-js/: Cargo.toml
crates/k6-js/src/: http_client.rs  lib.rs  runtime.rs  vu.rs
crates/k6-js/src/api/: check.rs  crypto.rs  csv.rs  csv_shim.js  encoding.rs  execution.rs  fs.rs  fs_shim.js  grpc.rs  grpc_shim.js  html.rs  http.rs  metrics.rs  mod.rs  secrets.rs  secrets_shim.js  sleep.rs  streams.rs  streams_shim.js  timers.rs  webcrypto.rs  webcrypto_shim.js  ws.rs  ws_shim.js
crates/k6-js/tests/: e2e.rs
examples/: bad_script.js  simple.js
