[package]
name = "k6-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam-queue = { workspace = true }
hdrhistogram = { workspace = true }
url = { workspace = true }
