[package]
name = "k6-js"
version.workspace = true
edition.workspace = true

[dependencies]
k6-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rquickjs = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
md-5 = { workspace = true }
md4 = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
ripemd = { workspace = true }
digest = { workspace = true }
rand = { workspace = true }
scraper = { workspace = true }
ipnet = { workspace = true }
url = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
aes = { workspace = true }
aes-gcm = { workspace = true }
cbc = { workspace = true }
ctr = { workspace = true }
pbkdf2 = { workspace = true }

[dev-dependencies]
axum = "0.8"
tokio-util = { workspace = true }
